--- a/_theme/theme.yaml
+++ b/_theme/theme.yaml
@@ -17,12 +17,12 @@ elements:
       templates:
         archive:
           category_entry_listing:
-            label: カテゴリ別記事リスト
+            label: カテゴリ別記事リストほげほげ
             mappings:
               category:
                 archive_type: Category
           yearly_entry_listing:
-            label: 年別ブログ記事リスト
+            label: 年別ブログ記事リスト！
             mappings:
               yearly:
                 archive_type: Yearly
