--- a/_theme/theme.yaml
+++ b/_theme/theme.yaml
@@ -27,7 +27,7 @@ elements:
                 archive_type: Yearly
         index:
           feed_recent:
-            label: 最新記事のフィードぉオォ！
+            label: 最新記事のフィードオォ！
             outfile: atom.xml
             rebuild_me: 1
           index_page:
